--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "klinecharts",
-  "version": "5.2.0",
+  "name": "lightklinecharts",
+  "version": "5.2.1",
   "description": "Lightweight k-line chart built with html5 canvas",
   "main": "index.js",
   "types": "./types/index.d.ts",
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/liihuu/KLineChart"
+    "url": "https://github.com/iguzhi/LightKLineChart"
   },
   "keywords": [
     "k-line",
